Fixed #20. * Added a <noscript> notification. * Added a cookie support notification above the login form. * Moved error notification area to be visible over the search header.

--- a/app/views/history/styles/entry.styl
+++ b/app/views/history/styles/entry.styl
@@ -1,16 +1,16 @@
 @import 'nib'
 
 .entry
-  padding:30px 30px 30px 30px;
+  padding:30px 30px 30px 30px
   border: 1px solid #dfe4e6
-  margin-bottom:28px;
-  display:block;
-  position:relative;
+  margin-bottom:28px
+  display:block
+  position:relative
   min-width:320px
   overflow:hidden
 
   .title
-    font-size: 1.04rem;
+    font-size: 1.04rem
     font-family:'ProximaNova SemiBold', sans-serif
     margin-bottom:30px
 
@@ -23,7 +23,7 @@
     font-size:14px
 
     .first-line-toggler
-      height:28px;
+      height:28px
       overflow-y:hidden
 
   .tags
@@ -32,7 +32,7 @@
 
     .tag
       display:inline-block
-      color:#67737a;
+      color:#67737a
       margin-top:5px
       margin-right:15px
 
@@ -111,7 +111,7 @@
 
   //.entry:hover
   &:hover, &.active
-    border-color:#c5ced4;
+    border-color:#c5ced4
 
     // h3.title a
     //   color:#ec7963
@@ -137,12 +137,12 @@
 
     .ctrlHolder
       position:relative
-      margin-bottom: 13px;
-      border-bottom: 1px solid #dfe4e6;
+      margin-bottom: 13px
+      border-bottom: 1px solid #dfe4e6
 
       &:last-child
-        margin-top:15px;
-        margin-bottom: 0;
+        margin-top:15px
+        margin-bottom: 0
 
       &::before
         top:2px
@@ -161,14 +161,14 @@
 
       input[type="text"], textarea
         padding-bottom:15px
-        width: 100%;
-        font-weight: 500;
-        border:0;
-        border:none;
+        width: 100%
+        font-weight: 500
+        border:0
+        border:none
         min-height:30px
-        /*border-radius: 3px;
-        -moz-border-radius: 3px;
-        -webkit-border-radius: 3px;
+        /*border-radius: 3px
+        -moz-border-radius: 3px
+        -webkit-border-radius: 3px
         */
 
       textarea
@@ -177,7 +177,7 @@
         padding-bottom:5px
 
       label
-        margin-right: 30px;
+        margin-right: 30px
 
   &:hover
     .entry-actions a
